--- a/cases-study-details.html
+++ b/cases-study-details.html
@@ -244,13 +244,13 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>About Us</h2>
+					<h2>Cases Studies</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">About Us</span>
+							<span class="active">Cases Study Details</span>
 						</li>
 					</ul>
 				</div>
@@ -258,236 +258,87 @@
 		</div>
 		<!--=== End Page Banner Area ===-->
 
-		<!--=== Start About Area ===-->
-		<div class="about-area ptb-100">
+		<!--=== Start Cases Study Details Area ===-->
+		<div class="cases-details-area ptb-100">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="about-img-three">
-							<img src="assets/images/about-us-3.jpg" alt="about-us">
-						</div>
+				<div class="cases-details-content">
+					<div class="cases-details-img">
+						<img src="assets/images/cases-details-img.jpg" alt="cases-details-img">
 					</div>
-					<div class="col-lg-6">
-						<div class="about-content-three">
-							<span class="top-title">About Us</span>
-							<h2>Innovative Strategies and Creative Solutions</h2>
-							<p>Established with a vision to redefine the art of storytelling & design, we have been at the forefront of delivering groundbreaking creative solutions since our inception. Our agency is a dynamic powerhouse.</p>
-
-							<p>Monitoring & managing online reviews, feedback & mentions to maintain positive brand reputation and address any negative publicity effectively.</p>
-								
-							<p>Advising on & implementing measures to enhance online security, protect data & ensure compliance with industry regulations.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End About Area ===-->
-
-		<!--=== Start Services Area ===-->
-		<div class="services-area pb-75">
-			<div class="container">
-				<div class="section-title" data-cues="slideInUp">
-					<span class="top-title">Our Services</span>
-					<h2>Professional & Creative Agency Solutions</h2>
-				</div>
-
-				<div class="row justify-content-center" data-cues="slideInUp">
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-1.svg" alt="services-icon">
+					<div class="cases-details-top-content">
+						<div class="row">
+							<div class="col-lg-5">
+								<h2>Business Development and Partnerships</h2>
 							</div>
-							<h3>
-								<a href="#">Strategy Consulting</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Product Management</li>
-								<li>Financial Advisory</li>
-								<li>Product Strategy</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-2.svg" alt="services-icon">
+							<div class="col-lg-7">
+								<p>In the ever-evolving landscape of digital marketing, effective business development and strategic partnerships are crucial for sustained success. This case study explores how [Your Digital Agency], a leading player in the digital realm, partnered with [Client X] to enhance business growth and create lasting synergies.</p>
 							</div>
-							<h3>
-								<a href="#">Digital Marketing</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Marketing Strategies</li>
-								<li>Business Development</li>
-								<li>Financial Advisory</li>
-							</ul>
 						</div>
 					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-3.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Web Development</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Technology Solutions</li>
-								<li>Market Research Analysis</li>
-								<li>Project Management</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-4.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Creative Design</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Training & Development</li>
-								<li>Sustainability Consulting</li>
-								<li>Crisis Management</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End Services Area ===-->
+					<div class="cases-details-content">
+						<p>[Client X] is a [industry/sector] company facing challenges related to [specific issues, goals, or market challenges]. Seeking a strategic approach to business development, they turned to Stir for expertise. The primary goals of this collaboration were to: executed the devised strategies with precision and agility. Challenges, such as [mention any challenges encountered], were addressed through</p>
 
-		<!-- Start Testimonials Area -->
-		<div class="testimonials-area-three overflow-hidden">
-			<div class="container">
-				<div class="row align-items-end">
-					<div class="col-lg-8">
-						<div class="section-title ms-0 text-start">
-							<h2>Testimonials</h2>
-						</div>
+						<div class="mb-30"></div>
 
-						<div class="testimonial-slide-two owl-carousel owl-theme">
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
+						<h3>Strategy and Planning How Increase Business In Short Time</h3>
+						<p>executed the devised strategies with precision and agility. Challenges, such as [mention any challenges encountered], were addressed through [specific solutions or adjustments]. The partnership development process involved meticulous negotiations and relationship-building efforts. executed the devised strategies with precision and agility. Challenges, such as [mention any challenges encountered], were addressed through [specific solutions.</p>
+
+						<div class="mb-30"></div>
+
+						<div class="row">
+							<div class="col-lg-6 col-md-6 mb-3 mb-md-0">
+								<ul class="cases-details-list ps-0 mb-0 list-unstyled">
 									<li>
-										<i class="fa-solid fa-star"></i>
+										40% increase in online engagement and brand visibility.
 									</li>
 									<li>
-										<i class="fa-solid fa-star"></i>
+										Successful implementation of specific
 									</li>
 									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
+										30% growth in overall business metrics within 
 									</li>
 								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
-									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
-									</div>
-								</div>
 							</div>
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
-									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
-									</div>
+							<div class="col-lg-6 col-md-6">
+								<div class="d-flex justify-content-md-end">
+									<ul class="cases-details-list ps-0 mb-0 list-unstyled">
+										<li>
+											Conversion Rate Optimization
+										</li>
+										<li>
+											Brand Recognition and Thought Leadership
+										</li>
+										<li>
+											ROI on Digital Ad Campaigns
+										</li>
+									</ul>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="testimonial-img-three mt-4 mt-lg-0">
-							<img src="assets/images/testimonial-6.jpg" alt="testimonial">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Testimonials Area -->
 
-		<!--=== Start Contact Us Area ===-->
-		<div class="contact-us-area ptb-100">
-			<div class="container">
-				<div class="section-title">
-					<span class="top-title">Appointment</span>
-					<h2>Love to Hear from You Get in Touch!</h2>
-				</div>
-				<form class="appointment-form style-two">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Your Name *">
+						<div class="mb-30"></div>
+
+						<div class="row">
+							<div class="col-sm-6">
+								<div class="case-img mb-4 mb-sm-0">
+									<img src="assets/images/cases-10.jpg" alt="cases">
+								</div>
+							</div>
+							<div class="col-sm-6">
+								<div class="case-img">
+									<img src="assets/images/cases-11.jpg" alt="cases">
+								</div>
 							</div>
 						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="email" class="form-control" placeholder="Your Email *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="What you are interested *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Project Budget *">
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<div class="form-group">
-								<textarea cols="30" rows="6" class="form-control" placeholder="Message *"></textarea>
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<button type="submit" class="circle-btn d-inline-block text-decoration-none bg-transparent">
-								Learn More
-								<i class="fa-solid fa-arrow-up-right"></i>
-							</button>
-						</div>
+
+						<div class="mb-30"></div>
+
+						<p>The collaboration between Stir and Client X exemplifies the power of effective business development and strategic partnerships in the digital realm. The results achieved underscore the importance of a tailored, holistic approach to achieving and exceeding business objectives.</p>
 					</div>
-				</form>
+				</div>
 			</div>
 		</div>
-		<!--=== End Contact Us Area ===-->
+		<!--=== End Cases Study Details Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
