--- a/service-details.html
+++ b/service-details.html
@@ -244,13 +244,13 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>About Us</h2>
+					<h2>Our Services Details</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">About Us</span>
+							<span class="active">Service Details</span>
 						</li>
 					</ul>
 				</div>
@@ -258,236 +258,228 @@
 		</div>
 		<!--=== End Page Banner Area ===-->
 
-		<!--=== Start About Area ===-->
-		<div class="about-area ptb-100">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="about-img-three">
-							<img src="assets/images/about-us-3.jpg" alt="about-us">
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="about-content-three">
-							<span class="top-title">About Us</span>
-							<h2>Innovative Strategies and Creative Solutions</h2>
-							<p>Established with a vision to redefine the art of storytelling & design, we have been at the forefront of delivering groundbreaking creative solutions since our inception. Our agency is a dynamic powerhouse.</p>
-
-							<p>Monitoring & managing online reviews, feedback & mentions to maintain positive brand reputation and address any negative publicity effectively.</p>
-								
-							<p>Advising on & implementing measures to enhance online security, protect data & ensure compliance with industry regulations.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End About Area ===-->
-
 		<!--=== Start Services Area ===-->
-		<div class="services-area pb-75">
+		<div class="service-details-area ptb-100">
 			<div class="container">
-				<div class="section-title" data-cues="slideInUp">
-					<span class="top-title">Our Services</span>
-					<h2>Professional & Creative Agency Solutions</h2>
-				</div>
-
-				<div class="row justify-content-center" data-cues="slideInUp">
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-1.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Strategy Consulting</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Product Management</li>
-								<li>Financial Advisory</li>
-								<li>Product Strategy</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-2.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Digital Marketing</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Marketing Strategies</li>
-								<li>Business Development</li>
-								<li>Financial Advisory</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-3.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Web Development</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Technology Solutions</li>
-								<li>Market Research Analysis</li>
-								<li>Project Management</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-4.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Creative Design</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Training & Development</li>
-								<li>Sustainability Consulting</li>
-								<li>Crisis Management</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End Services Area ===-->
-
-		<!-- Start Testimonials Area -->
-		<div class="testimonials-area-three overflow-hidden">
-			<div class="container">
-				<div class="row align-items-end">
+				<div class="row">
 					<div class="col-lg-8">
-						<div class="section-title ms-0 text-start">
-							<h2>Testimonials</h2>
-						</div>
+						<div class="service-details-content">
+							<div class="service-details-img">
+								<img src="assets/images/services-img-1.jpg" alt="services-img">
+							</div>
+							<h2>Strategy Consulting</h2>
+							<p>Creating high-quality video content, including promotional videos tutorials and advertisements & utilizing them part of digital marketing campaigns across various platforms. Collaborating with influential individuals or personalities on social media to promote products/services and reach a wider audience.</p>
+							<p>Consultancy agencies offer expert advice, guidance, and solutions to businesses seeking improvement in specific areas such as management finance technology or operations. These agencies leverage their industry knowledge and experience to assist companies in optimizing processes.</p>
+							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
 
-						<div class="testimonial-slide-two owl-carousel owl-theme">
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
+							<div class="mb-30"></div>
+
+							<div class="row justify-content-center">
+								<div class="col-lg-12 col-xl-6">
+									<div class="services-single-item style-two">
+										<div class="d-sm-flex align-items-center">
+											<div class="flex-shrink-0">
+												<div class="icon">
+													<img src="assets/images/services-icon-1.svg" alt="services-icon">
+												</div>
+											</div>
+											<div class="flex-grow-1 ms-sm-3">
+												<h3>
+													<a href="#">Strategy Consulting</a>
+												</h3>
+												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
+											</div>
+										</div>
+										<ul class="ps-0 mb-0 list-unstyled border-top">
+											<li>Product Management</li>
+											<li>Financial Advisory</li>
+											<li>Product Strategy</li>
+										</ul>
 									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
+								</div>
+								<div class="col-lg-12 col-xl-6">
+									<div class="services-single-item style-two">
+										<div class="d-sm-flex align-items-center">
+											<div class="flex-shrink-0">
+												<div class="icon">
+													<img src="assets/images/services-icon-2.svg" alt="services-icon">
+												</div>
+											</div>
+											<div class="flex-grow-1 ms-sm-3">
+												<h3>
+													<a href="#">Digital Marketing</a>
+												</h3>
+												<p class="border-0 p-0 m-0">Expert guidance in formulating and growth plans.</p>
+											</div>
+										</div>
+										<ul class="ps-0 mb-0 list-unstyled border-top">
+											<li>Marketing Strategies</li>
+											<li>Business Development</li>
+											<li>Financial Advisory</li>
+										</ul>
 									</div>
 								</div>
 							</div>
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
+
+							<p>A marketing agency is a dedicated entity that strategizes, plans, and executes marketing campaigns for businesses to enhance brand visibility, attract customers & drive sales. These agencies employ various tools and channels, including digital platforms, social media, content creation, and advertising.</p>
+
+							<div class="mb-30 pb-md-4"></div>
+
+							<h2>Some Basic Questions</h2>
+
+							<div class="mb-30"></div>
+							
+							<div class="accordion accordion-content" id="accordionExample">
+								<div class="accordion-item">
+									<h2 class="accordion-header mb-0">
+										<button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+											<span class="d-sm-flex align-items-center">
+												<span class="flex-shrink-0">
+													<span class="count">01</span>
+												</span>
+												<span class="flex-grow-1 mt-3 mt-sm-0">
+													<span>What is the difference between creative agency and marketing agency?</span>
+												</span>
+											</span>
+										</button>
+									</h2>
+									<div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+										<div class="accordion-body">
+											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+										</div>
 									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
+								</div>
+								<div class="accordion-item">
+									<h2 class="accordion-header mb-0">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+											<span class="d-sm-flex align-items-center">
+												<span class="flex-shrink-0">
+													<span class="count">02</span>
+												</span>
+												<span class="flex-grow-1 mt-3 mt-sm-0">
+													<span>What is the difference between media and creative agency?</span>
+												</span>
+											</span>
+										</button>
+									</h2>
+									<div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+										<div class="accordion-body">
+											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-item">
+									<h2 class="accordion-header mb-0">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+											<span class="d-sm-flex align-items-center">
+												<span class="flex-shrink-0">
+													<span class="count">03</span>
+												</span>
+												<span class="flex-grow-1 mt-3 mt-sm-0">
+													<span>What is the difference between media and creative agency?</span>
+												</span>
+											</span>
+										</button>
+									</h2>
+									<div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+										<div class="accordion-body">
+											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-item">
+									<h2 class="accordion-header mb-0">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+											<span class="d-sm-flex align-items-center">
+												<span class="flex-shrink-0">
+													<span class="count">04</span>
+												</span>
+												<span class="flex-grow-1 mt-3 mt-sm-0">
+													<span>What is the difference between creative agency and studio?</span>
+												</span>
+											</span>
+										</button>
+									</h2>
+									<div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+										<div class="accordion-body">
+											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+										</div>
+									</div>
+								</div>
+								<div class="accordion-item">
+									<h2 class="accordion-header mb-0">
+										<button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+											<span class="d-sm-flex align-items-center">
+												<span class="flex-shrink-0">
+													<span class="count">05</span>
+												</span>
+												<span class="flex-grow-1 mt-3 mt-sm-0">
+													<span>Who is responsible for the creative product of an agency?</span>
+												</span>
+											</span>
+										</button>
+									</h2>
+									<div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+										<div class="accordion-body">
+											<p>Your success is our priority. We measure our achievements by the success stories of our clients. Through seamless communication, meticulous attention to detail, and a passion for perfection, we strive to exceed your expectations.</p>
+										</div>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-lg-4">
-						<div class="testimonial-img-three mt-4 mt-lg-0">
-							<img src="assets/images/testimonial-6.jpg" alt="testimonial">
+						<div class="sidebar-widget mt-5 mt-lg-0">
+							<div class="mb-5">
+								<h3>Search Now</h3>
+								<form class="src-form position-relative">
+									<input type="text" class="form-control" placeholder="Search here.....">
+									<button type="submit" class="src-btn position-absolute top-50 end-0 translate-middle-y">
+										<i class="fa-regular fa-magnifying-glass"></i>
+									</button>
+								</form>
+							</div>
+							<div class="mb-5">
+								<h3>Service List</h3>
+								<ul class="ps-0 mb-0 list-unstyled service-list">
+									<li>
+										<a href="#">
+											01 Strategy Consulting
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											02 Digital Marketing
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											03 Web Development
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											04 Creative Design
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											05 Business Strategy
+										</a>
+									</li>
+									<li>
+										<a href="#">
+											06 Website Design
+										</a>
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-		<!-- End Testimonials Area -->
-
-		<!--=== Start Contact Us Area ===-->
-		<div class="contact-us-area ptb-100">
-			<div class="container">
-				<div class="section-title">
-					<span class="top-title">Appointment</span>
-					<h2>Love to Hear from You Get in Touch!</h2>
-				</div>
-				<form class="appointment-form style-two">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Your Name *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="email" class="form-control" placeholder="Your Email *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="What you are interested *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Project Budget *">
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<div class="form-group">
-								<textarea cols="30" rows="6" class="form-control" placeholder="Message *"></textarea>
-							</div>
-						</div>
-						<div class="col-lg-12">
-							<button type="submit" class="circle-btn d-inline-block text-decoration-none bg-transparent">
-								Learn More
-								<i class="fa-solid fa-arrow-up-right"></i>
-							</button>
-						</div>
-					</div>
-				</form>
-			</div>
-		</div>
-		<!--=== End Contact Us Area ===-->
+		<!--=== End Services Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
