--- a/services.html
+++ b/services.html
@@ -244,13 +244,13 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>About Us</h2>
+					<h2>Services</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">About Us</span>
+							<span class="active">Services</span>
 						</li>
 					</ul>
 				</div>
@@ -258,42 +258,12 @@
 		</div>
 		<!--=== End Page Banner Area ===-->
 
-		<!--=== Start About Area ===-->
-		<div class="about-area ptb-100">
-			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="about-img-three">
-							<img src="assets/images/about-us-3.jpg" alt="about-us">
-						</div>
-					</div>
-					<div class="col-lg-6">
-						<div class="about-content-three">
-							<span class="top-title">About Us</span>
-							<h2>Innovative Strategies and Creative Solutions</h2>
-							<p>Established with a vision to redefine the art of storytelling & design, we have been at the forefront of delivering groundbreaking creative solutions since our inception. Our agency is a dynamic powerhouse.</p>
-
-							<p>Monitoring & managing online reviews, feedback & mentions to maintain positive brand reputation and address any negative publicity effectively.</p>
-								
-							<p>Advising on & implementing measures to enhance online security, protect data & ensure compliance with industry regulations.</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End About Area ===-->
-
 		<!--=== Start Services Area ===-->
-		<div class="services-area pb-75">
+		<div class="services-area pt-100 pb-75">
 			<div class="container">
-				<div class="section-title" data-cues="slideInUp">
-					<span class="top-title">Our Services</span>
-					<h2>Professional & Creative Agency Solutions</h2>
-				</div>
-
 				<div class="row justify-content-center" data-cues="slideInUp">
 					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
+						<div class="services-single-item style-two style-three">
 							<div class="icon">
 								<img src="assets/images/services-icon-1.svg" alt="services-icon">
 							</div>
@@ -309,7 +279,7 @@
 						</div>
 					</div>
 					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
+						<div class="services-single-item style-two style-three">
 							<div class="icon">
 								<img src="assets/images/services-icon-2.svg" alt="services-icon">
 							</div>
@@ -325,7 +295,7 @@
 						</div>
 					</div>
 					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
+						<div class="services-single-item style-two style-three">
 							<div class="icon">
 								<img src="assets/images/services-icon-3.svg" alt="services-icon">
 							</div>
@@ -341,12 +311,77 @@
 						</div>
 					</div>
 					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
+						<div class="services-single-item style-two style-three">
 							<div class="icon">
 								<img src="assets/images/services-icon-4.svg" alt="services-icon">
 							</div>
 							<h3>
 								<a href="#">Creative Design</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Training & Development</li>
+								<li>Sustainability Consulting</li>
+								<li>Crisis Management</li>
+							</ul>
+						</div>
+					</div>
+
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item style-two style-three">
+							<div class="icon">
+								<img src="assets/images/services-icon-15.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Website Design</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Product Management</li>
+								<li>Financial Advisory</li>
+								<li>Product Strategy</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item style-two style-three">
+							<div class="icon">
+								<img src="assets/images/services-icon-16.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Product Design</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Marketing Strategies</li>
+								<li>Business Development</li>
+								<li>Financial Advisory</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item style-two style-three">
+							<div class="icon">
+								<img src="assets/images/services-icon-17.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">Business Strategy</a>
+							</h3>
+							<p>Expert guidance in formulating and growth plans.</p>
+							<ul class="ps-0 mb-0 list-unstyled">
+								<li>Technology Solutions</li>
+								<li>Market Research Analysis</li>
+								<li>Project Management</li>
+							</ul>
+						</div>
+					</div>
+					<div class="col-xl-3 col-sm-6">
+						<div class="services-single-item style-two style-three">
+							<div class="icon">
+								<img src="assets/images/services-icon-18.svg" alt="services-icon">
+							</div>
+							<h3>
+								<a href="#">UI/UX Design</a>
 							</h3>
 							<p>Expert guidance in formulating and growth plans.</p>
 							<ul class="ps-0 mb-0 list-unstyled">
@@ -362,7 +397,7 @@
 		<!--=== End Services Area ===-->
 
 		<!-- Start Testimonials Area -->
-		<div class="testimonials-area-three overflow-hidden">
+		<div class="testimonials-area-three pb-100 overflow-hidden">
 			<div class="container">
 				<div class="row align-items-end">
 					<div class="col-lg-8">
