--- a/single-blog.html
+++ b/single-blog.html
@@ -244,13 +244,13 @@
 		<div class="page-banner-area bg-black bg-img" data-background="./assets/images/banner-bg-shape.png">
 			<div class="container mw-1680">
 				<div class="page-banner-content">
-					<h2>About Us</h2>
+					<h2>Blog Details</h2>
 					<ul class="ps-0 mb-0 list-unstyled justify-content-center page-breadcrumb d-flex flex-wrap gap-4">
 						<li>
 							<a href="#">Home</a>
 						</li>
 						<li>
-							<span class="active">About Us</span>
+							<span class="active">Blog Details</span>
 						</li>
 					</ul>
 				</div>
@@ -258,199 +258,102 @@
 		</div>
 		<!--=== End Page Banner Area ===-->
 
-		<!--=== Start About Area ===-->
-		<div class="about-area ptb-100">
+		<!-- Start Blog Details Area -->
+		<div class="blog-details-area pt-100">
 			<div class="container">
-				<div class="row align-items-center">
-					<div class="col-lg-6">
-						<div class="about-img-three">
-							<img src="assets/images/about-us-3.jpg" alt="about-us">
-						</div>
+				<div class="blog-details-content">
+					<div class="blog-details-img">
+						<img src="assets/images/blog-details-img.jpg" alt="blog-details-img">
 					</div>
-					<div class="col-lg-6">
-						<div class="about-content-three">
-							<span class="top-title">About Us</span>
-							<h2>Innovative Strategies and Creative Solutions</h2>
-							<p>Established with a vision to redefine the art of storytelling & design, we have been at the forefront of delivering groundbreaking creative solutions since our inception. Our agency is a dynamic powerhouse.</p>
+					<h2>A Day in Fashion's Hidden Realms, A Behind-the-Scenes Look at Creative Processes</h2>
+					<p><span>W</span> elcome readers to an exclusive journey behind the scenes of the fashion world. Explore the concealed aspects of the industry that contribute to the glamour and innovation we see on the runway. Unveiling the heart of fashion – step inside design studios to witness the artistic process. From concept sketches to material selection, discover how ideas evolve into stunning garments. Get an insider's view of model casting sessions and fittings. Learn how designers collaborate with models to bring their creations to life, ensuring a perfect match between the garment and the wearer. Dive into the transformative world of fashion styling and makeup. Explore the creativity and precision required to enhance a model's appearance, aligning with the designer's vision.</p>
+					<p>Follow our journey to an actual fashion photoshoot. From scouting locations to capturing the perfect shot, witness the meticulous planning and execution that goes into creating compelling imagery. Explore the manufacturing side of the fashion industry. From cutting-edge technology to skilled craftsmanship, understand how fabrics are transformed into exquisite garments on a large scale. Experience the excitement and chaos of a fashion show rehearsal.</p>
 
-							<p>Monitoring & managing online reviews, feedback & mentions to maintain positive brand reputation and address any negative publicity effectively.</p>
-								
-							<p>Advising on & implementing measures to enhance online security, protect data & ensure compliance with industry regulations.</p>
+					<div class="mb-60"></div>
+
+					<blockquote>
+						<img src="assets/images/quote.svg" alt="quat">
+						<p>Delve into the role of technology in the fashion industry. From virtual fittings to AI-driven trend analysis, discover how digital innovations are reshaping the way fashion is created and consumed.</p>
+						<span>Park Smith</span>
+					</blockquote>
+
+					<div class="mb-60"></div>
+
+					<div class="row">
+						<div class="col-g-6 col-sm-6">
+							<div class="blog-img mb-4 mb-sm-0">
+								<img src="assets/images/blog-12.jpg" alt="blog">
+							</div>
+						</div>
+						<div class="col-g-6 col-sm-6">
+							<div class="blog-img">
+								<img src="assets/images/blog-13.jpg" alt="blog">
+							</div>
 						</div>
 					</div>
+
+					<div class="mb-60"></div>
+
+					<h2>Behind-the-Scenes of a Photoshoot</h2>
+					<p>Follow our journey to an actual fashion photoshoot. From scouting locations to capturing the perfect shot, witness the meticulous planning and execution that goes into creating compelling imagery. Explore the manufacturing side of the fashion industry. From cutting-edge technology to skilled craftsmanship, understand how fabrics are transformed into exquisite garments on a large scale. Experience the excitement and chaos of a fashion show rehearsal. Witness models, designers, and crew coming together to ensure a flawless presentation on the runway. Delve into the role of technology in the fashion industry. From virtual fittings to AI-driven trend analysis, discover how digital innovations are reshaping the way fashion is created and consumed.</p>
+					<p>Explore the manufacturing side of the fashion industry. From cutting-edge technology to skilled craftsmanship, understand how fabrics are transformed into exquisite garments on a large scale. Experience the excitement and chaos of a fashion show rehearsal. Witness models, designers, and crew coming together to ensure a flawless presentation on the runway. Delve into the role of technology in the fashion industry. From virtual fittings to AI-driven trend analysis, discover how digital innovations are reshaping the way fashion is created and </p>
+
+					<div class="d-flex justify-content-between align-items-center flex-wrap gap-3 tags-share">
+						<ul class="ps-0 mb-0 list-unstyled d-flex flex-wrap gap-2 tags-list align-items-center">
+							<li>
+								<span>Tags:</span>
+							</li>
+							<li>
+								<a href="#">Design</a>
+							</li>
+							<li>
+								<a href="#">Development</a>
+							</li>
+							<li>
+								<a href="#">Planning</a>
+							</li>
+							<li>
+								<a href="#">Marketing</a>
+							</li>
+						</ul>
+						<ul class="ps-0 mb-0 list-unstyled d-flex social-list align-items-center">
+							<li>
+								<span>Share:</span>
+							</li>
+							<li>
+								<a href="#">
+									<i class="fa-brands fa-facebook-f"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="fa-brands fa-twitter"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="fa-brands fa-linkedin"></i>
+								</a>
+							</li>
+							<li>
+								<a href="#">
+									<i class="fa-brands fa-pinterest"></i>
+								</a>
+							</li>
+						</ul>
+					</div>	
 				</div>
 			</div>
 		</div>
-		<!--=== End About Area ===-->
+		<!-- End Blog Details Area -->
 
-		<!--=== Start Services Area ===-->
-		<div class="services-area pb-75">
+		<!--=== Start Post A Comment Area ===-->
+		<div class="post-a-comment-area pb-100">
 			<div class="container">
-				<div class="section-title" data-cues="slideInUp">
-					<span class="top-title">Our Services</span>
-					<h2>Professional & Creative Agency Solutions</h2>
+				<div class="section-title text-start ms-0">
+					<h2>Post A Comment</h2>
 				</div>
-
-				<div class="row justify-content-center" data-cues="slideInUp">
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-1.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Strategy Consulting</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Product Management</li>
-								<li>Financial Advisory</li>
-								<li>Product Strategy</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-2.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Digital Marketing</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Marketing Strategies</li>
-								<li>Business Development</li>
-								<li>Financial Advisory</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-3.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Web Development</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Technology Solutions</li>
-								<li>Market Research Analysis</li>
-								<li>Project Management</li>
-							</ul>
-						</div>
-					</div>
-					<div class="col-xl-3 col-sm-6">
-						<div class="services-single-item style-two">
-							<div class="icon">
-								<img src="assets/images/services-icon-4.svg" alt="services-icon">
-							</div>
-							<h3>
-								<a href="#">Creative Design</a>
-							</h3>
-							<p>Expert guidance in formulating and growth plans.</p>
-							<ul class="ps-0 mb-0 list-unstyled">
-								<li>Training & Development</li>
-								<li>Sustainability Consulting</li>
-								<li>Crisis Management</li>
-							</ul>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!--=== End Services Area ===-->
-
-		<!-- Start Testimonials Area -->
-		<div class="testimonials-area-three overflow-hidden">
-			<div class="container">
-				<div class="row align-items-end">
-					<div class="col-lg-8">
-						<div class="section-title ms-0 text-start">
-							<h2>Testimonials</h2>
-						</div>
-
-						<div class="testimonial-slide-two owl-carousel owl-theme">
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
-									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
-									</div>
-								</div>
-							</div>
-							<div class="testimonials-single-item-two style-three">
-								<ul class="ps-0 list-unstyled d-flex gap-2 review">
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-									<li>
-										<i class="fa-solid fa-star"></i>
-									</li>
-								</ul>
-								<p>Whether it's enhancing market visibility, improving operational efficiency, or implementing cutting-edge technologies, our agency offers a wide spectrum of services. From strategic consulting & digital transformation to marketing strategies & financial advisory...</p>
-	
-								<div class="d-flex align-items-center info">
-									<div class="flex-shrink-0">
-										  <img src="assets/images/testimonial-3.png" class="rounded-circle" alt="testimonial">
-									</div>
-									<div class="flex-grow-1 ms-3">
-										  <h3>Brandi Rowe</h3>
-										<span>Marketing Lead at Technlogia</span>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-lg-4">
-						<div class="testimonial-img-three mt-4 mt-lg-0">
-							<img src="assets/images/testimonial-6.jpg" alt="testimonial">
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<!-- End Testimonials Area -->
-
-		<!--=== Start Contact Us Area ===-->
-		<div class="contact-us-area ptb-100">
-			<div class="container">
-				<div class="section-title">
-					<span class="top-title">Appointment</span>
-					<h2>Love to Hear from You Get in Touch!</h2>
-				</div>
-				<form class="appointment-form style-two">
+				<form class="post-a-comment">
 					<div class="row">
 						<div class="col-lg-6">
 							<div class="form-group">
@@ -460,16 +363,6 @@
 						<div class="col-lg-6">
 							<div class="form-group">
 								<input type="email" class="form-control" placeholder="Your Email *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="What you are interested *">
-							</div>
-						</div>
-						<div class="col-lg-6">
-							<div class="form-group">
-								<input type="text" class="form-control" placeholder="Project Budget *">
 							</div>
 						</div>
 						<div class="col-lg-12">
@@ -487,7 +380,7 @@
 				</form>
 			</div>
 		</div>
-		<!--=== End Contact Us Area ===-->
+		<!--=== End Post A Comment Area ===-->
 
 		<!--=== Start Footer Area ===-->
 		<div class="footer-area pt-100 pb-75 bg-color-030303">
